Fix some trivial depercation warnings #33